--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -21,7 +21,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/teal_200"
+            android:background="@color/white"
             android:orientation="vertical"
             android:gravity="center"
             >
@@ -36,7 +36,7 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/ilova_3x4"
+                    android:src="@drawable/rasm3x4"
                     />
 
             </androidx.cardview.widget.CardView>
