--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -27,13 +27,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:gravity="center"
+                android:gravity="top"
                 android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
+                    android:layout_gravity="center"
                     app:cardElevation="10dp">
 
                     <ImageView
@@ -150,174 +151,8 @@
                             android:textColor="@color/black"
                             android:textSize="10sp"
                             tools:ignore="SmallSp" />
-                        <TextView
 
-                            android:layout_width="20dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="3dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="20dp"
-                            android:drawablePadding="10dp"
-                            android:justificationMode="inter_word"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="10sp"
-                            tools:ignore="SmallSp" />
-                        <TextView
 
-                            android:layout_width="20dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="3dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="20dp"
-                            android:drawablePadding="10dp"
-                            android:justificationMode="inter_word"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="10sp"
-                            tools:ignore="SmallSp" />
-                        <TextView
-
-                            android:layout_width="20dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="3dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="20dp"
-                            android:drawablePadding="10dp"
-                            android:justificationMode="inter_word"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="10sp"
-                            tools:ignore="SmallSp" />
-                        <TextView
-
-                            android:layout_width="20dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="3dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="20dp"
-                            android:drawablePadding="10dp"
-                            android:justificationMode="inter_word"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="10sp"
-                            tools:ignore="SmallSp" />
-                        <TextView
-
-                            android:layout_width="20dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="3dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="20dp"
-                            android:drawablePadding="10dp"
-                            android:justificationMode="inter_word"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="10sp"
-                            tools:ignore="SmallSp" />
-                        <TextView
-
-                            android:layout_width="20dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="3dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="20dp"
-                            android:drawablePadding="10dp"
-                            android:justificationMode="inter_word"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="10sp"
-                            tools:ignore="SmallSp" />
-                        <TextView
-
-                            android:layout_width="20dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="3dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="20dp"
-                            android:drawablePadding="10dp"
-                            android:justificationMode="inter_word"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="10sp"
-                            tools:ignore="SmallSp" />
-                        <TextView
-
-                            android:layout_width="20dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="3dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="20dp"
-                            android:drawablePadding="10dp"
-                            android:justificationMode="inter_word"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="10sp"
-                            tools:ignore="SmallSp" />
-                        <TextView
-
-                            android:layout_width="20dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="3dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="20dp"
-                            android:drawablePadding="10dp"
-                            android:justificationMode="inter_word"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="10sp"
-                            tools:ignore="SmallSp" />
-                        <TextView
-
-                            android:layout_width="20dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="3dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="20dp"
-                            android:drawablePadding="10dp"
-                            android:justificationMode="inter_word"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="10sp"
-                            tools:ignore="SmallSp" />
-                        <TextView
-
-                            android:layout_width="20dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="3dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="20dp"
-                            android:drawablePadding="10dp"
-                            android:justificationMode="inter_word"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="10sp"
-                            tools:ignore="SmallSp" />
-                        <TextView
-
-                            android:layout_width="20dp"
-                            android:layout_height="30dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="3dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="20dp"
-                            android:drawablePadding="10dp"
-                            android:justificationMode="inter_word"
-                            android:text=""
-                            android:textColor="@color/black"
-                            android:textSize="10sp"
-                            tools:ignore="SmallSp" />
 
                     </LinearLayout>
                 </LinearLayout>
